# crypto-ai-assistant

./: .gitignore  README.md  abi_cache.json  pyproject.toml
src/: agent.py  config.py  main.py
src/tools/: data.py  portfolio.py  visualizations.py
src/utils/: contract.py  ethereum.py
