[tool.poetry]
name = "web3 crypto ai assistant"
version = "0.1.0"
description = ""
authors = ["Nnaemeka Ohakim <ohakim.nnaemeka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^7.7.0"
python-dotenv = "^1.0.1"
numpy = "^2.2.2"
pandas = "^2.2.3"
langchain = "^0.3.15"
langchain-openai = "^0.3.1"
matplotlib = "^3.10.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
